Core/stencil/legend/module/util/ModuleDataParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g 2009-08-05 10:52:01

	package stencil.legend.module.util;
	
	import java.io.*;
	import stencil.parser.string.ParseStencil;	
	import stencil.legend.module.ModuleData;
	import static stencil.util.Tuples.stripQuotes;	


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

@SuppressWarnings("all")
public class ModuleDataParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CLASS", "DEFAULTS", "DESC", "MODULE_DATA", "OPERATOR", "FACET", "FACETS", "OPT", "OPTS", "NAME", "REV", "TARGET", "OPEN", "CLOSE", "TERM", "TERM_OPEN", "DEF", "VAL", "CDATA", "ID", "WS", "COMMENT"
    };
    public static final int DEF=20;
    public static final int CDATA=22;
    public static final int FACETS=10;
    public static final int WS=24;
    public static final int TARGET=15;
    public static final int FACET=9;
    public static final int REV=14;
    public static final int COMMENT=25;
    public static final int OPT=11;
    public static final int OPTS=12;
    public static final int TERM_OPEN=19;
    public static final int CLASS=4;
    public static final int VAL=21;
    public static final int OPEN=16;
    public static final int EOF=-1;
    public static final int CLOSE=17;
    public static final int DESC=6;
    public static final int MODULE_DATA=7;
    public static final int OPERATOR=8;
    public static final int NAME=13;
    public static final int DEFAULTS=5;
    public static final int TERM=18;
    public static final int ID=23;

    // delegates
    // delegators


        public ModuleDataParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public ModuleDataParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return ModuleDataParser.tokenNames; }
    public String getGrammarFileName() { return "/nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g"; }


    	public static final String REVISION = "\"2\"";
    	
    	protected Tree defaultFacets;
    	protected Tree defaultOpts;
    		
    	/**Parse the contents of the passed reader.**/
    	public static ModuleData parse(BufferedReader reader) throws Exception {
        String line = reader.readLine();
        StringBuilder source = new StringBuilder();
        while (line !=null) {source.append(line); line = reader.readLine();}

      
    		ANTLRStringStream input = new ANTLRStringStream(source.toString());
        
    		ModuleDataLexer lexer = new ModuleDataLexer(input);
    		CommonTokenStream tokens = new CommonTokenStream(lexer);

    		ModuleDataParser parser = new ModuleDataParser(tokens);
    		parser.setTreeAdaptor(new MDTreeAdapter());
    		ModuleData t= (ModuleData) parser.moduleData().getTree();
    		return t;
    	}
    	
    	
    	//TODO: Remove when all references to this are removed.  Resolution is by absolute file name only...BAD!!!!
    	public static ModuleData parse(String filename) throws Exception {
    		StringBuilder source = new StringBuilder();
    		BufferedReader file = new BufferedReader(new FileReader(filename));
    		return parse(file);
    	}

    	protected void setDefaultFacets(Tree defaultFacets) {this.defaultFacets=defaultFacets;}
    	protected Tree getDefaultFacets() {return (Tree) adaptor.dupTree(defaultFacets);}
    	
    	protected void setDefaultOperatorOpts(Tree defaultOpts) {this.defaultOpts = defaultOpts;}
    	
    	//Get the default operator options, but splice in the given child node to the options as well.
    	protected Tree getDefaultOperatorOpts(Tree... children) {
    		Tree t = (Tree) adaptor.dupTree(defaultOpts);
            if (children != null) {
            	for (Tree child: children) {adaptor.addChild(t, child);}
            }		
    		return t;
    	}

    	protected void mismatch(IntStream input, int type, BitSet follow) 
    		throws RecognitionException 
    	{
    		throw new MismatchedTokenException(type, input);
    	}
    	
    	public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) 
    		throws RecognitionException
    	{
    		throw e;	
    	}



    public static class moduleData_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "moduleData"
    // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:134:1: moduleData : OPEN MODULE_DATA r= rev n= name CLOSE clss description defaults ( operator )+ TERM_OPEN MODULE_DATA CLOSE -> ^( MODULE_DATA[$n.name] clss defaults description ( operator )+ ) ;
    public final ModuleDataParser.moduleData_return moduleData() throws RecognitionException {
        ModuleDataParser.moduleData_return retval = new ModuleDataParser.moduleData_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token OPEN1=null;
        Token MODULE_DATA2=null;
        Token CLOSE3=null;
        Token TERM_OPEN8=null;
        Token MODULE_DATA9=null;
        Token CLOSE10=null;
        ModuleDataParser.rev_return r = null;

        ModuleDataParser.name_return n = null;

        ModuleDataParser.clss_return clss4 = null;

        ModuleDataParser.description_return description5 = null;

        ModuleDataParser.defaults_return defaults6 = null;

        ModuleDataParser.operator_return operator7 = null;


        CommonTree OPEN1_tree=null;
        CommonTree MODULE_DATA2_tree=null;
        CommonTree CLOSE3_tree=null;
        CommonTree TERM_OPEN8_tree=null;
        CommonTree MODULE_DATA9_tree=null;
        CommonTree CLOSE10_tree=null;
        RewriteRuleTokenStream stream_CLOSE=new RewriteRuleTokenStream(adaptor,"token CLOSE");
        RewriteRuleTokenStream stream_TERM_OPEN=new RewriteRuleTokenStream(adaptor,"token TERM_OPEN");
        RewriteRuleTokenStream stream_MODULE_DATA=new RewriteRuleTokenStream(adaptor,"token MODULE_DATA");
        RewriteRuleTokenStream stream_OPEN=new RewriteRuleTokenStream(adaptor,"token OPEN");
        RewriteRuleSubtreeStream stream_description=new RewriteRuleSubtreeStream(adaptor,"rule description");
        RewriteRuleSubtreeStream stream_clss=new RewriteRuleSubtreeStream(adaptor,"rule clss");
        RewriteRuleSubtreeStream stream_defaults=new RewriteRuleSubtreeStream(adaptor,"rule defaults");
        RewriteRuleSubtreeStream stream_operator=new RewriteRuleSubtreeStream(adaptor,"rule operator");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        RewriteRuleSubtreeStream stream_rev=new RewriteRuleSubtreeStream(adaptor,"rule rev");
        try {
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:135:2: ( OPEN MODULE_DATA r= rev n= name CLOSE clss description defaults ( operator )+ TERM_OPEN MODULE_DATA CLOSE -> ^( MODULE_DATA[$n.name] clss defaults description ( operator )+ ) )
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:135:4: OPEN MODULE_DATA r= rev n= name CLOSE clss description defaults ( operator )+ TERM_OPEN MODULE_DATA CLOSE
            {
            OPEN1=(Token)match(input,OPEN,FOLLOW_OPEN_in_moduleData209);  
            stream_OPEN.add(OPEN1);

            MODULE_DATA2=(Token)match(input,MODULE_DATA,FOLLOW_MODULE_DATA_in_moduleData211);  
            stream_MODULE_DATA.add(MODULE_DATA2);

            pushFollow(FOLLOW_rev_in_moduleData215);
            r=rev();

            state._fsp--;

            stream_rev.add(r.getTree());
            pushFollow(FOLLOW_name_in_moduleData219);
            n=name();

            state._fsp--;

            stream_name.add(n.getTree());
            CLOSE3=(Token)match(input,CLOSE,FOLLOW_CLOSE_in_moduleData221);  
            stream_CLOSE.add(CLOSE3);

            if (!r.ver.equals(REVISION)) {
            		String message = "Revision number not recognized. Found "+ r.ver + ", expected " + REVISION + ".";
            		throw new RuntimeException(message);}
            	  
            pushFollow(FOLLOW_clss_in_moduleData233);
            clss4=clss();

            state._fsp--;

            stream_clss.add(clss4.getTree());
            pushFollow(FOLLOW_description_in_moduleData235);
            description5=description();

            state._fsp--;

            stream_description.add(description5.getTree());
            pushFollow(FOLLOW_defaults_in_moduleData237);
            defaults6=defaults();

            state._fsp--;

            stream_defaults.add(defaults6.getTree());
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:140:30: ( operator )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OPEN) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:140:30: operator
            	    {
            	    pushFollow(FOLLOW_operator_in_moduleData239);
            	    operator7=operator();

            	    state._fsp--;

            	    stream_operator.add(operator7.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            TERM_OPEN8=(Token)match(input,TERM_OPEN,FOLLOW_TERM_OPEN_in_moduleData242);  
            stream_TERM_OPEN.add(TERM_OPEN8);

            MODULE_DATA9=(Token)match(input,MODULE_DATA,FOLLOW_MODULE_DATA_in_moduleData244);  
            stream_MODULE_DATA.add(MODULE_DATA9);

            CLOSE10=(Token)match(input,CLOSE,FOLLOW_CLOSE_in_moduleData246);  
            stream_CLOSE.add(CLOSE10);



            // AST REWRITE
            // elements: defaults, clss, operator, description, MODULE_DATA
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 141:3: -> ^( MODULE_DATA[$n.name] clss defaults description ( operator )+ )
            {
                // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:141:6: ^( MODULE_DATA[$n.name] clss defaults description ( operator )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(MODULE_DATA, (n!=null?n.name:null)), root_1);

                adaptor.addChild(root_1, stream_clss.nextTree());
                adaptor.addChild(root_1, stream_defaults.nextTree());
                adaptor.addChild(root_1, stream_description.nextTree());
                if ( !(stream_operator.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_operator.hasNext() ) {
                    adaptor.addChild(root_1, stream_operator.nextTree());

                }
                stream_operator.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "moduleData"

    public static class rev_return extends ParserRuleReturnScope {
        public String ver;
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "rev"
    // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:144:1: rev returns [String ver] : REV DEF v= VAL ;
    public final ModuleDataParser.rev_return rev() throws RecognitionException {
        ModuleDataParser.rev_return retval = new ModuleDataParser.rev_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token v=null;
        Token REV11=null;
        Token DEF12=null;

        CommonTree v_tree=null;
        CommonTree REV11_tree=null;
        CommonTree DEF12_tree=null;

        try {
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:144:24: ( REV DEF v= VAL )
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:144:26: REV DEF v= VAL
            {
            root_0 = (CommonTree)adaptor.nil();

            REV11=(Token)match(input,REV,FOLLOW_REV_in_rev276); 
            REV11_tree = (CommonTree)adaptor.create(REV11);
            adaptor.addChild(root_0, REV11_tree);

            DEF12=(Token)match(input,DEF,FOLLOW_DEF_in_rev278); 
            DEF12_tree = (CommonTree)adaptor.create(DEF12);
            adaptor.addChild(root_0, DEF12_tree);

            v=(Token)match(input,VAL,FOLLOW_VAL_in_rev282); 
            v_tree = (CommonTree)adaptor.create(v);
            adaptor.addChild(root_0, v_tree);

            retval.ver = (v!=null?v.getText():null);

            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "rev"

    public static class clss_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "clss"
    // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:146:1: clss : OPEN CLASS n= name TERM -> CLASS[$n.name] ;
    public final ModuleDataParser.clss_return clss() throws RecognitionException {
        ModuleDataParser.clss_return retval = new ModuleDataParser.clss_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token OPEN13=null;
        Token CLASS14=null;
        Token TERM15=null;
        ModuleDataParser.name_return n = null;


        CommonTree OPEN13_tree=null;
        CommonTree CLASS14_tree=null;
        CommonTree TERM15_tree=null;
        RewriteRuleTokenStream stream_CLASS=new RewriteRuleTokenStream(adaptor,"token CLASS");
        RewriteRuleTokenStream stream_OPEN=new RewriteRuleTokenStream(adaptor,"token OPEN");
        RewriteRuleTokenStream stream_TERM=new RewriteRuleTokenStream(adaptor,"token TERM");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        try {
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:146:5: ( OPEN CLASS n= name TERM -> CLASS[$n.name] )
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:146:7: OPEN CLASS n= name TERM
            {
            OPEN13=(Token)match(input,OPEN,FOLLOW_OPEN_in_clss291);  
            stream_OPEN.add(OPEN13);

            CLASS14=(Token)match(input,CLASS,FOLLOW_CLASS_in_clss293);  
            stream_CLASS.add(CLASS14);

            pushFollow(FOLLOW_name_in_clss297);
            n=name();

            state._fsp--;

            stream_name.add(n.getTree());
            TERM15=(Token)match(input,TERM,FOLLOW_TERM_in_clss299);  
            stream_TERM.add(TERM15);



            // AST REWRITE
            // elements: CLASS
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 146:30: -> CLASS[$n.name]
            {
                adaptor.addChild(root_0, (CommonTree)adaptor.create(CLASS, (n!=null?n.name:null)));

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "clss"

    public static class description_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "description"
    // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:148:1: description : ( OPEN DESC CLOSE d= CDATA TERM_OPEN DESC CLOSE -> DESC[$d.text] | -> DESC[\"\"] );
    public final ModuleDataParser.description_return description() throws RecognitionException {
        ModuleDataParser.description_return retval = new ModuleDataParser.description_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token d=null;
        Token OPEN16=null;
        Token DESC17=null;
        Token CLOSE18=null;
        Token TERM_OPEN19=null;
        Token DESC20=null;
        Token CLOSE21=null;

        CommonTree d_tree=null;
        CommonTree OPEN16_tree=null;
        CommonTree DESC17_tree=null;
        CommonTree CLOSE18_tree=null;
        CommonTree TERM_OPEN19_tree=null;
        CommonTree DESC20_tree=null;
        CommonTree CLOSE21_tree=null;
        RewriteRuleTokenStream stream_CLOSE=new RewriteRuleTokenStream(adaptor,"token CLOSE");
        RewriteRuleTokenStream stream_TERM_OPEN=new RewriteRuleTokenStream(adaptor,"token TERM_OPEN");
        RewriteRuleTokenStream stream_DESC=new RewriteRuleTokenStream(adaptor,"token DESC");
        RewriteRuleTokenStream stream_CDATA=new RewriteRuleTokenStream(adaptor,"token CDATA");
        RewriteRuleTokenStream stream_OPEN=new RewriteRuleTokenStream(adaptor,"token OPEN");

        try {
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:148:12: ( OPEN DESC CLOSE d= CDATA TERM_OPEN DESC CLOSE -> DESC[$d.text] | -> DESC[\"\"] )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==OPEN) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==DESC) ) {
                    alt2=1;
                }
                else if ( (LA2_1==DEFAULTS) ) {
                    alt2=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:148:14: OPEN DESC CLOSE d= CDATA TERM_OPEN DESC CLOSE
                    {
                    OPEN16=(Token)match(input,OPEN,FOLLOW_OPEN_in_description311);  
                    stream_OPEN.add(OPEN16);

                    DESC17=(Token)match(input,DESC,FOLLOW_DESC_in_description313);  
                    stream_DESC.add(DESC17);

                    CLOSE18=(Token)match(input,CLOSE,FOLLOW_CLOSE_in_description315);  
                    stream_CLOSE.add(CLOSE18);

                    d=(Token)match(input,CDATA,FOLLOW_CDATA_in_description319);  
                    stream_CDATA.add(d);

                    TERM_OPEN19=(Token)match(input,TERM_OPEN,FOLLOW_TERM_OPEN_in_description321);  
                    stream_TERM_OPEN.add(TERM_OPEN19);

                    DESC20=(Token)match(input,DESC,FOLLOW_DESC_in_description323);  
                    stream_DESC.add(DESC20);

                    CLOSE21=(Token)match(input,CLOSE,FOLLOW_CLOSE_in_description325);  
                    stream_CLOSE.add(CLOSE21);



                    // AST REWRITE
                    // elements: DESC
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 148:59: -> DESC[$d.text]
                    {
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(DESC, (d!=null?d.getText():null)));

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:149:6: 
                    {

                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 149:6: -> DESC[\"\"]
                    {
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(DESC, ""));

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "description"

    public static class defaults_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "defaults"
    // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:151:1: defaults : OPEN DEFAULTS CLOSE o= operatorOpts f= facets TERM_OPEN DEFAULTS CLOSE ;
    public final ModuleDataParser.defaults_return defaults() throws RecognitionException {
        ModuleDataParser.defaults_return retval = new ModuleDataParser.defaults_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token OPEN22=null;
        Token DEFAULTS23=null;
        Token CLOSE24=null;
        Token TERM_OPEN25=null;
        Token DEFAULTS26=null;
        Token CLOSE27=null;
        ModuleDataParser.operatorOpts_return o = null;

        ModuleDataParser.facets_return f = null;


        CommonTree OPEN22_tree=null;
        CommonTree DEFAULTS23_tree=null;
        CommonTree CLOSE24_tree=null;
        CommonTree TERM_OPEN25_tree=null;
        CommonTree DEFAULTS26_tree=null;
        CommonTree CLOSE27_tree=null;

        try {
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:151:9: ( OPEN DEFAULTS CLOSE o= operatorOpts f= facets TERM_OPEN DEFAULTS CLOSE )
            // /nfs/rontok/xraid/users/jcottam/Documents/workspace/Stencil/TSM/src/stencil/legend/module/util/ModuleData.g:151:11: OPEN DEFAULTS CLOSE o= operatorOpts f= facets TERM_OPEN DEFAULTS CLOSE
            {
            root_0 = (CommonTree)adaptor.nil();
